<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/LinearLayout01"
    >

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5px"
		>
	
		<ImageView android:id="@+id/imgPerson"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="72px"
			android:layout_height="72px"
			android:src="@drawable/dummy"
			android:padding="5px"
			/>
		
	
		<RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:padding="5px"
			>
	
			<TextView android:text="@+id/txtPersonName" android:id="@+id/txtPersonName" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<TextView android:text="@+id/txtPersonSaldo" android:id="@+id/txtPersonSaldo" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	           	android:layout_alignParentRight="true"
				/>
		</RelativeLayout>
	</LinearLayout>

	<RadioGroup android:layout_width="fill_parent"
	       android:layout_height="wrap_content" android:orientation="vertical"
	       android:id="@+id/group1"
	       >
	       
		<RadioButton android:id="@+id/RadioButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/i_loaned_to"></RadioButton>
		<RadioButton android:id="@+id/RadioButton02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/i_loaned_from"></RadioButton>
	</RadioGroup>
	
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amount"></TextView>
	<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="number|numberDecimal"></EditText>

	<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/memo"></TextView>
	<EditText android:id="@+id/EditText02" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
	
	<Button android:id="@+id/Button01" android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:text="@string/save"
		android:onClick="@string/OnSaveClick"></Button>



</LinearLayout>
